Fix spacing on hero

--- a/sass/_pages.scss
+++ b/sass/_pages.scss
@@ -6,7 +6,7 @@
     font-size: 1.8em;
     line-height: 1.2;
     font-weight: 600;
-    margin: var(--spacing-vertical) 0;
+    margin: 4px 0 var(--spacing-vertical-smol);
     border-left: 4px solid var(--color-primary);
     padding-left: var(--spacing-horizontal);
   }
